--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>ONLINE BUS BOOKING</title>
-        <link rel="icon" href="./pictures/image.png">
+        <link rel="icon" href="images.jpg">
         <link rel="stylesheet" href="style.css">
         <script src="main.js"></script>
     </head>
