--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <pre><h2>Make your journey comfortable 
     with public services
                 </h2></pre>
-                <a href="index.html"><img src="./pictures/image.png" class="main_img"></a>
+                <a href="index.html"><img src="./pictures/images.jpg" class="main_img"></a>
             </div>
             <div class="route_main">
                 <h1>Available routes</h1>
